# variadic_generics-rs

./: Cargo.toml  README.md
examples/: option_tuple.rs
src/: lib.rs
